# flashcards

./: .env.example  .env.local.example  .gitattributes  .gitignore  Makefile  docker-compose.yml  pyproject.toml
infra/postgres/: init.sql
libs/flashcards-common/: pyproject.toml
libs/flashcards-common/src/flashcards_common/: __init__.py  health.py  http.py  jwt.py  logging.py  otel.py  settings.py
services/auth-svc/: Dockerfile  alembic.ini  pyproject.toml
services/auth-svc/alembic/: env.py
services/auth-svc/alembic/versions/: 001_initial.py
services/auth-svc/src/auth_svc/: config.py  database.py  main.py  models.py  routes.py  schemas.py  seed.py
services/auth-svc/tests/: conftest.py  test_auth.py
services/deck-svc/: Dockerfile  pyproject.toml
services/deck-svc/alembic/: env.py
services/deck-svc/alembic/versions/: 001_initial.py
services/deck-svc/src/deck_svc/: config.py  database.py  main.py  models.py  routes.py  schemas.py  seed.py
services/deck-svc/tests/: conftest.py  test_decks.py
services/generation-svc/: Dockerfile  pyproject.toml
services/generation-svc/src/generation_svc/: config.py  main.py  providers.py  routes.py  worker.py
services/generation-svc/tests/: test_providers.py
services/scheduler-svc/: Dockerfile  pyproject.toml
services/scheduler-svc/src/scheduler_svc/: config.py  fsrs_helper.py  main.py  routes.py  token_context.py
services/scheduler-svc/tests/: test_scheduler.py
services/web/: Dockerfile  pyproject.toml
services/web/src/web/: clients.py  config.py  main.py  routes.py  session.py
services/web/src/web/templates/: base.html  deck_detail.html  decks.html  job_status.html  login.html  register.html  study.html  upload.html
services/web/tests/: test_web.py
